--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.6));
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.7));
   }
   
   header {
@@ -32,7 +32,7 @@
     border: none;
     outline: none;
     background-color: rgba(255, 255, 255, 0.3);
-    border-radius: 16px 0px 16px 0px;
+    border-radius: 0px 16px 0px 16px;
     border-bottom: 3px solid #DF8E00;
     
     color: #313131;
@@ -42,6 +42,7 @@
   }
   
   header input:focus {
+    border-bottom: 3px solid #ffa200;
     background-color: rgba(255, 255, 255, 0.6);
   }
   
@@ -53,7 +54,11 @@
     align-items: center;
     text-align: center;
   }
-  
+  .location{
+    padding: 20px;
+    
+    border-bottom: 3px solid #DF8E00;
+  }
   .location .city {
     color: #FFF;
     font-size: 32px;
@@ -93,3 +98,4 @@
     font-weight: 500;
     text-shadow: 0px 4px rgba(0, 0, 0, 0.4);
   }
+ 
